4B/cs444/tests/site/pass/pass_publicconstructors.joos
/* pass: public constructors */
public class A {
  public A() {}
}

