4B/cs444/tests/site/fail/fail_packageprivatemethods.joos
/* fail: package private methods */
package dovs.joos.features;

public class A {
  /* package private */ int m() {
    return 42;
  }
}

